        parts than the current one, but all needed parts were loaded before.
      - Don't rebuild the cache if simulation is on.
      - Replaced argument parsing algorithm from a shell invocation to a
        simple word parser (simple one-level shell quotes still allowed).
      - 'version' and 'help' commands now work also here.
  * lib:
    - config:
      - New option 'cupt::console::warnings::removal-of-essential'.
      - Don't ask dpkg for architectures if the 'apt::architecture' option
        was already set via configuration file.
      - New method 'getConfigurationPartPaths'.
      - Enable colored output on terminals by default.
      - New options in 'cupt::console::actions-preview' family:
        'package-indicators::manually-installed' and
        'package-indicators::automatically-installed'.
    - cache:
      - Verifying repository signatures: use APT keyrings directly, now that
        they're finally world-readable.
      - Verifying repository signatures: display better error message when
        a key has expired.
      - Removed the 'copy the keyring' hack, introduced in 2.2.2.
      - Removed support of localized descriptions without a description hash
        present in the original index (even oldstable has them).
    - system/worker:
      - 'updateReleaseAndIndexData': fixed removing partial uncompressed file
        if uncompressing of a temporary file failed.
      - 'updateReleaseAndIndexData': use new '*-Download' sections in
        diff indexes to check size and hash sums of individual diff earlier.
      - 'updateReleaseAndIndexData': dropped the obsolete way of downloading
        translation files via localication index (even oldstable has them in
        Release files).
      - 'changeSystem': do not require anymore that 'dpkg' binary package is
        installed, it's enough that dpkg binary is available.
  * debian:
    - control:
      - Added build-dependency on locales-all (for locale-specific tests).